# Leadtime_IA

./: .gitignore  README.md  app.py  desktop.ini  pyproject.toml  requirements.txt
controller/: auth_controller.py  project_controller.py
data/: ligne commande en cours.xlsx
model/: data_handler.py  data_processing.py
plotting/: plotting.py
view/: display.py
