[project]  
name = "leadtime-ia"  
version = "0.1.0"  
description = "Leadtime IA is a Streamlit app that predicts the lead time of a project based on the project's features."  
authors = [  
    {name = "Emmanuelle Membrive", email = "emmanuellemembrive@gmail.com"}  
]  
readme = "README.md"  
requires-python = ">=3.13"  
dependencies = [  
    "streamlit (>=1.42.0,<2.0.0)",  
    "pandas (>=2.2.3,<3.0.0)",  
    "matplotlib (>=3.10.0,<4.0.0)",  
    "seaborn (>=0.13.2,<0.14.0)",  
    "plotly (>=6.0.0,<7.0.0)",  
    "pillow (>=11.1.0,<12.0.0)",  
    "openpyxl (>=3.1.5,<4.0.0)"  
]  

[build-system]  
requires = ["poetry-core>=2.0.0,<3.0.0"]  
build-backend = "poetry.core.masonry.api"  

[tool.poetry]  
packages = [  
    { include = "controller" },  
    { include = "model" },  
    { include = "view" }  
]